Frontend started. Refactor routes to use query params. Fixed auth glitch. Test app created.
