# ark-second-backend-api-tsql/api/routers/arkRouter.js
@@ -1,5 +1,5 @@
 const express = require("express");
-const { body } = require("express-validator");
+const { query } = require("express-validator");
 
 const router = express.Router();
 
@@ -18,27 +18,27 @@ router.use(authParse);
 // gets cumulative (specified) holdings per ticker by date
 router.get(
   "/db/funds/holdings/date",
-  body("fundType").isArray({ min: 1 }),
-  body("date").isDate(),
+  query("fundType").isArray({ min: 1 }),
+  query("date").isDate(),
   dbController.getFundsHoldingByDate
 );
 
 // gets each fund's holdings by ticker over a period of time
 router.get(
   "/db/funds/holdings/ticker",
-  body("fundType").isArray({ min: 1 }),
-  body("ticker").isString(),
-  body("fromDate").isDate(),
-  body("toDate").isDate(),
+  query("fundType").isArray({ min: 1 }),
+  query("ticker").isString(),
+  query("fromDate").isDate(),
+  query("toDate").isDate(),
   dbController.getFundHoldingByTicker
 );
 
 // gets a tickers cumulative change in shares across all funds
 router.get(
   "/db/funds/change",
-  body("ticker").isString(),
-  body("fromDate").isDate(),
-  body("toDate").isDate(),
+  query("ticker").isString(),
+  query("fromDate").isDate(),
+  query("toDate").isDate(),
   dbController.getChangeByTicker
 );
 
@@ -48,15 +48,13 @@ router.get("/db/funds", dbController.getFunds);
 // gets all the quotes for that ticker at certain periods between the fromDate (included) to the toDate (excluded)
 router.get(
   "/fin/history",
-  body("ticker").isString(),
-  body("period").isString(),
-  body("fromDate").isDate(),
-  body("toDate").isDate(),
+  query("ticker").isString(),
+  query("period").isIn(["d", "w", "m", "v"]),
   finController.getHistory
 );
 
 // gets the current quote for that ticker
-router.get("/fin/quote", body("ticker").isString(), finController.getQuote);
+router.get("/fin/quote", query("ticker").isString(), finController.getQuote);
 
 /////////////////////////////////////////////////////////////////////
 
