# ark-second-backend-api-tsql/app.js
@@ -10,10 +10,23 @@ const app = express();
 
 const HttpError = require("./components/models/http-error");
 const arkRouter = require("./api/routers/arkRouter");
-const userRouter = require("./api/routers/userRouter");
+const userRouterNoAuth = require("./api/routers/userRouterNoAuth");
+const userRouterAuth = require("./api/routers/userRouterAuth")
 const csvDownload = require("./middleware/csvDownload");
 const csvProcess = require("./middleware/csvProcessor");
 const csvArchive = require("./middleware/csvArchive");
+
+////////////////////////////////////////////////////////////////
+
+const job = schedule.scheduleJob("0 0 */2 * * 1-5", async () => {
+  try {
+    await csvDownload();
+    await csvProcess();
+    await csvArchive();
+  } catch (err) {
+    loggerError(err.message, "App level scheduled CSV job failed.", "csv");
+  }
+});
 
 ////////////////////////////////////////////////////////////////
 
@@ -27,24 +40,15 @@ app.use((req, res, next) => {
   res.setHeader("Access-Control-Allow-Origin", "*");
   res.setHeader(
     "Access-Control-Allow-Headers",
-    "Origin, X-Requested-With, Content-Type, Accept"
+    "Origin, X-Requested-With, Content-Type, Accept, Authorization"
   );
-  res.setHeader("Access-Control-Allow-Methods", "GET, POST");
+  res.setHeader("Access-Control-Allow-Methods", "GET, POST, PATCH, DELETE");
   next();
 });
 
-const job = schedule.scheduleJob("0 0 */2 * * 1-5", async () => {
-  try {
-    await csvDownload();
-    await csvProcess();
-    await csvArchive();
-  } catch (err) {
-    loggerError(err.message, "App level scheduled CSV job failed.", "csv");
-  }
-});
-
+app.use("/user", userRouterNoAuth);
+app.use("/user", userRouterAuth);
 app.use("/api", arkRouter);
-app.use("/user", userRouter);
 
 app.use((req, res, next) => {
   const error = new HttpError("Could not find this route.", 404);
@@ -52,9 +56,10 @@ app.use((req, res, next) => {
 });
 
 app.use((error, req, res, next) => {
+  console.log(error)
   if (req.file) {
     fs.unlink(req.file.path, (err) => {
-      loggerError(err);
+      console.log(error)
     });
   }
   if (res.headerSent) {
